tests/baselines/reference/parser.forAwait.es2018.errors.txt
forAwaitInWithDeclIsError.ts(1,20): error TS1005: 'of' expected.
forAwaitInWithDeclIsError.ts(1,23): error TS2304: Cannot find name 'y'.
forAwaitInWithExprIsError.ts(1,12): error TS2304: Cannot find name 'x'.
forAwaitInWithExprIsError.ts(1,14): error TS1005: 'of' expected.
forAwaitInWithExprIsError.ts(1,17): error TS2304: Cannot find name 'y'.
inFunctionDeclWithDeclIsError.ts(3,9): error TS1103: 'for await' loops are only allowed within async functions and at the top levels of modules.
inFunctionDeclWithExprIsError.ts(3,9): error TS1103: 'for await' loops are only allowed within async functions and at the top levels of modules.
inGeneratorWithDeclIsError.ts(3,9): error TS1103: 'for await' loops are only allowed within async functions and at the top levels of modules.
inGeneratorWithExprIsError.ts(3,9): error TS1103: 'for await' loops are only allowed within async functions and at the top levels of modules.
topLevelWithDeclIsError.ts(1,5): error TS1431: 'for await' loops are only allowed at the top level of a file when that file is a module, but this file has no imports or exports. Consider adding an empty 'export {}' to make this file a module.
topLevelWithDeclIsError.ts(1,5): error TS1432: Top-level 'for await' loops are only allowed when the 'module' option is set to 'es2022', 'esnext', 'system', 'node16', 'node18', 'nodenext', or 'preserve', and the 'target' option is set to 'es2017' or higher.
topLevelWithDeclIsError.ts(1,23): error TS2304: Cannot find name 'y'.
topLevelWithExprIsError.ts(1,5): error TS1431: 'for await' loops are only allowed at the top level of a file when that file is a module, but this file has no imports or exports. Consider adding an empty 'export {}' to make this file a module.
topLevelWithExprIsError.ts(1,5): error TS1432: Top-level 'for await' loops are only allowed when the 'module' option is set to 'es2022', 'esnext', 'system', 'node16', 'node18', 'nodenext', or 'preserve', and the 'target' option is set to 'es2017' or higher.
topLevelWithExprIsError.ts(1,12): error TS2304: Cannot find name 'x'.
topLevelWithExprIsError.ts(1,17): error TS2304: Cannot find name 'y'.


==== topLevelWithDeclIsError.ts (3 errors) ====
    for await (const x of y) {
        ~~~~~
!!! error TS1431: 'for await' loops are only allowed at the top level of a file when that file is a module, but this file has no imports or exports. Consider adding an empty 'export {}' to make this file a module.
        ~~~~~
!!! error TS1432: Top-level 'for await' loops are only allowed when the 'module' option is set to 'es2022', 'esnext', 'system', 'node16', 'node18', 'nodenext', or 'preserve', and the 'target' option is set to 'es2017' or higher.
                          ~
!!! error TS2304: Cannot find name 'y'.
    }
==== topLevelWithExprIsError.ts (4 errors) ====
    for await (x of y) {
        ~~~~~
!!! error TS1431: 'for await' loops are only allowed at the top level of a file when that file is a module, but this file has no imports or exports. Consider adding an empty 'export {}' to make this file a module.
        ~~~~~
!!! error TS1432: Top-level 'for await' loops are only allowed when the 'module' option is set to 'es2022', 'esnext', 'system', 'node16', 'node18', 'nodenext', or 'preserve', and the 'target' option is set to 'es2017' or higher.
               ~
!!! error TS2304: Cannot find name 'x'.
                    ~
!!! error TS2304: Cannot find name 'y'.
    }
==== forAwaitInWithDeclIsError.ts (2 errors) ====
    for await (const x in y) {
                       ~~
!!! error TS1005: 'of' expected.
                          ~
!!! error TS2304: Cannot find name 'y'.
    }
==== forAwaitInWithExprIsError.ts (3 errors) ====
    for await (x in y) {
               ~
!!! error TS2304: Cannot find name 'x'.
                 ~~
!!! error TS1005: 'of' expected.
                    ~
!!! error TS2304: Cannot find name 'y'.
    }
==== inFunctionDeclWithDeclIsError.ts (1 errors) ====
    function f5() {
        let y: any;
        for await (const x of y) {
            ~~~~~
!!! error TS1103: 'for await' loops are only allowed within async functions and at the top levels of modules.
!!! related TS1356 inFunctionDeclWithDeclIsError.ts:1:10: Did you mean to mark this function as 'async'?
        }
    }
==== inFunctionDeclWithExprIsError.ts (1 errors) ====
    function f6() {
        let x: any, y: any;
        for await (x of y) {
            ~~~~~
!!! error TS1103: 'for await' loops are only allowed within async functions and at the top levels of modules.
!!! related TS1356 inFunctionDeclWithExprIsError.ts:1:10: Did you mean to mark this function as 'async'?
        }
    }
==== inAsyncFunctionWithDeclIsOk.ts (0 errors) ====
    async function f7() {
        let y: any;
        for await (const x of y) {
        }
    }
==== inAsyncFunctionWithExprIsOk.ts (0 errors) ====
    async function f8() {
        let x: any, y: any;
        for await (x of y) {
        }
    }
==== inAsyncGeneratorWithDeclIsOk.ts (0 errors) ====
    async function* f9() {
        let y: any;
        for await (const x of y) {
        }
    }
==== inAsyncGeneratorWithExpressionIsOk.ts (0 errors) ====
    async function* f10() {
        let x: any, y: any;
        for await (x of y) {
        }
    }
==== inGeneratorWithDeclIsError.ts (1 errors) ====
    function* f11() {
        let y: any;
        for await (const x of y) {
            ~~~~~
!!! error TS1103: 'for await' loops are only allowed within async functions and at the top levels of modules.
!!! related TS1356 inGeneratorWithDeclIsError.ts:1:11: Did you mean to mark this function as 'async'?
        }
    }
==== inGeneratorWithExprIsError.ts (1 errors) ====
    function* f12() {
        let x: any, y: any;
        for await (x of y) {
            ~~~~~
!!! error TS1103: 'for await' loops are only allowed within async functions and at the top levels of modules.
!!! related TS1356 inGeneratorWithExprIsError.ts:1:11: Did you mean to mark this function as 'async'?
        }
    }
    